--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,10 @@ services:
     volumes:
       - ./:/app
     ports:
-      - '3000:${PORTS}'
+      - '3000:${PORT}'
     env_file:
       - .env
     # command: pm2-docker start server.js -i max
 networks:
-    nodes:
-        external: false
+  nodes:
+    external: false
