--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.19.1",
     "fastq": "^1.17.1",
     "got": "^11.2.0",
     "pino-http": "^9.0.0"
